--- a/client/src/components/Projects/Projects.module.css
+++ b/client/src/components/Projects/Projects.module.css
@@ -28,7 +28,7 @@
 }
 
 .info {
-    color: #abaeb0;
+    color: #E8E8E9;
     font-size: 1.2rem;
     margin-top: 2rem;
     max-width: 70rem;
@@ -54,7 +54,7 @@
 }
 
 .skillsList {
-    color: #abaeb0;
+    color: #E8E8E9;
     font-size: 1.2rem;
 }
 
